development/sbt: Updated for version 0.13.7.
Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>